syntax = "proto3";

service GameCommunicator {
    // Sets a snake direction.
    rpc SetDirection(DirectionRequest) returns (DirectionResponse) {}

    rpc notifyGameState(GameStateRequest) returns (GameStateResponse) {}

    rpc setDirectionsAndUpdateGame(stream DirectionRequest) returns (stream GameStateRequest) {}

}


    message DirectionRequest {
        int32 snakeNumber = 1;
        int32 snakeDirection = 2;
    }

    message DirectionResponse {
        int32 received = 1;
    }

    message GameStateRequest {
        Map gameState = 1;
    }

    message GameStateResponse {
        int32 received = 1;
    }

    message Map{
        Point snakePosition = 1;
        Point fruitPosition = 2;
        int32 snakeDirection = 3;
        int32 height = 4;
        int32 width = 5;
    }

    message Point{
        int32 x = 1;
        int32 y = 2;
    }
